# igarss25tutorial

./: .gitignore  README.md  index.md  myst.yml  pyproject.toml  requirements_EOFM_evaluation.txt  tut1_intro.md  tut3_EOFM_finetune.ipynb  tut3_EOFM_inference.ipynb  tut3a_EOFM_finetune.ipynb  tut3b_EOFM_inference.ipynb
.github/workflows/: deploy.yml
