[project]
name = "igarss25tutorial"
version = "0.1.0"
description = "IGARSS 2025 tutorial: Harnessing the Power of Earth Foundation Models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthaccess>=0.14.0",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pystac-client>=0.8.6",
]

[project.optional-dependencies]
docs = [
    "jupyter-book>=2.0.0b0",
]
